--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
-    "test": "pnpm prettier:check"
+    "test": "pnpm prettier:check",
+    "vercel-build": "npm install --legacy-peer-deps && next build"
+
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
