--- a/package.json
+++ b/package.json
@@ -2,22 +2,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "npm install --legacy-peer-deps --force && next build",
+    "build": "next build",
     "vercel-build": "next build",
     "start": "next start",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
-    "test": "pnpm prettier:check",
-    "postinstall": "npm install --legacy-peer-deps --force"
-
-
+    "test": "pnpm prettier:check"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
-    "next": "^15.4.0-canary.61",
+    "next": "15.4.0-canary.100",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sonner": "^2.0.1"
@@ -34,6 +31,5 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.14",
     "typescript": "5.8.2"
-
   }
 }
